<resources>
    <string name="hello">Hello World, BizTracker!</string>
    <string name="app_name">Biz Tracker</string>
    <string name="more_stuffs">More</string>
    <string name="less_sutfffs">Less</string>
    <string name="pay">Pay</string>
    <string name="earn">Earn</string>
    <string name="plus_pay">-Pay</string>
    <string name="substract_earn">+Earn</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="delete_stuff">Delete stuff</string>
    <string name="new_stuff">New stuff</string>
    <string name="stuff_name">Stuff name</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="today_total_pay_and_earn">Today total pay / earn:  </string>
    <string name="reset_today_cost">Erase log</string>
    <string name="view_cost_history">View history</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="go_to_date">Go to date</string>
    <string name="go_to_date_description">View income and expense details of one day</string>
    <string name="starred_biz_log">Starred</string>
    <string name="view_starred_items">View starred income and expense details</string>
    <string name="no_day_biz_log">No income and expense details</string>
    <string name="biz_date">Choose date</string>
    <string name="biz">Biz log</string>
    <string name="today_biz">Today</string>
    <string name="year">Year</string>
    <string name="confirm_delete_stuff">Are you sure to delete stuff: %s ?</string>
    <string name="confirm_reset_today_cost">Are you sure to erase transactions at %s?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="make_star">Star it</string>
    <string name="remove_star">Remove star</string>
    <string name="delete_item_confirm">Are you sure to delete %s ?</string>
    <string name="config">Settings</string>
    <string name="version">Version</string>
    <string name="unknown">Unknown</string>
    <string name="password_protection">Password protection</string>
    <string name="password_protection_description">Input password, blank means no protection</string>
    <string name="password_hint">Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="password">Password</string>
    <string name="input_password">Input password</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_desc">Send feedback via E-Mail to improve the user experience.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">At first, please create a new stuff. After created successfully, press the stuff button, then press \"Pay\" or \"Earn\", enter the cost, press \"OK\" at last."</string>
    <string name="welcome_end_words">Are you ready?</string>
    <string name="understand">OK</string>
    <string name="help">Help</string>
    <string name="append_log">Add</string>
    <string name="loading">Loading</string>
    <string name="input_stuff_name">Input stuff name</string>
    <string name="save_success">Save successfully</string>
    <string name="save_fail">Fail, error occurred.</string>
    <string name="export">Export</string>
    <string name="export_success">Export successfully!</string>
    <string name="export_failed">Sorry, export failed:(</string>
    <string name="export_target_file">Successfully export to file: </string>
    <string name="export_to_file">Export to file</string>
    <string name="exporting_to_file">Exporting to file</string>
    <string name="export_success_title">Success</string>
    <string name="export_fail_title">Failed</string>
    <string name="cost">Cost</string>
    <string name="last_update_time">Date</string>
    <string name="star">Starred</string>
    <string name="export_title">Export as CSV file format</string>
    <string name="export_confirm">Are you sure to export all income and expense records to SD card?</string>
    <string name="default_currency">Default Currency</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="default_currency_description">Default currency exchange rate is used for statistics and summary.</string>
    <string name="currency">Currency</string>
    <string name="config_exchange_rate">Exchange rate</string>
    <string name="config_exchange_rate_description">An exchange rate between two currencies is the rate at which it will be exchanged for US$ 1. You may update it according to the latest one.</string>
    <string name="currency_code">Currency Code</string>
    <string name="input_exchange_rate">Input exchange rate</string>
    <string name="exchange_rate_validation_error">Exchange rate must be greater the zero.</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="input_cost">Input money</string>
    <string name="money">Money</string>
    <string name="modify">Modify</string>
    <string name="modify_details_info">Modify Details</string>
    <string name="modify_biz_log_success">Saved successfully</string>
    <string name="save_failed">Save failed</string>
    <string name="go_to_android_market">App in Market</string>
    <string name="go_to_android_market_description">View this app in Android Market</string>
    <string name="comment">Comment</string>
    <string name="project">Project</string>
    <string name="project_description">Create or manage project</string>
    <string name="no_project">No project, create one?</string>
    <string name="create_project">Create Project</string>
    <string name="project_name">Project Name</string>
    <string name="input_project_name">Type project name</string>
    <string name="add">Add</string>
    <string name="feedback">Feedback</string>
    <string name="no_email_send_app_installed">No email sender application installed.</string>
    <string name="detectiong_location">Detecting your location</string>
    <string name="transaction_location">Transaction location</string>
    <string name="type_transaction_location">Type transaction location</string>
    <string name="location">Location</string>
    <string name="search_transaction_hint">Search</string>
    <string name="find_location_error">Unable to detect your location.</string>
    <string name="volumn">Volume</string>
    <string name="volumn_description">Change the volume of the button click</string>
    <string name="search_by_date">Search by date</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="search">Search</string>
    <string name="search_by">Search transaction by date or keyword</string>
    <string name="no_search_result">No search result</string>
    <string name="search_result">Search result</string>
    <string name="search_result_count">Found %d records</string>
    <string name="search_help">Please type keyword to search</string>
    <string name="choose_search_type">Choose search type</string>
    <string name="transaction_date">Transaction date</string>
    <string name="no_photo">No photo, take one?</string>
    <string name="create_photo_folder_failed">Failed to create photo folder.</string>
    <string name="control_panel">Control Panel</string>
    <string name="choose_project">Choose Project</string>
    <string name="no_project_warning">There are no project, please create one then try again.</string>
    <string name="photo">Photo</string>
    <string name="photos">Photos</string>
    <string name="no_photo2">No photo</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="password_strength">Strength</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="not_rated">Not Rated</string>
    <string name="best">Best</string>
    <string name="confirm_password_not_match">Passwords do not match.</string>
    <string name="photo_info">Details</string>
    <string name="open_photo">Open</string>
    <string name="no_stuff_hint">Touch here to add your first stuff.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_photo">Are you sure to delete the current photo?</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="photo_not_exist">Cannot found this photo. Maybe it has been deleted.</string>
    <string name="fail_load_photo">Failed to load this photo. Please try again.</string>
    <string name="security">Security</string>
    <string name="about">About</string>
    <string name="sound">Sound</string>
    <string name="volume">Volume</string>
    <string name="volume_description">Change the volume of the button click</string>
    <string name="search_by_date_range">By date range</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_date_range">Choose date range</string>
    <string name="computing">Computing...</string>
    <string name="total">Total</string>
    <string name="multi_select">Multiple select</string>
    <string name="multi_select_tip">Please check some transaction items.</string>
    <string name="show_bottom_statistic_panel">Show statistic data at bottom</string>
    <string name="show_bottom_statistic_panel_description">Whether show statistic data at bottom of the transaction list</string>
    <string name="display">Display</string>
    <string name="manually_total">Manually summary</string>
    <string name="total_income">Income</string>
    <string name="total_expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="no_data_for_chart">No transaction information for charting.</string>
    <string name="favourite_transaction_list_chart_title">Statistics for stared items</string>
    <string name="search_result_chart_title">Statistics for keyword</string>
    <string name="date_chart_title">Statistics for date</string>
    <string name="date_range_chart_title">Statistics for date range</string>
    <string name="contribute_language">Contribute Language</string>
    <string name="contribute_language_summary">If BizTracker do not support your native language, please contribute your language to make it support it.</string>
    <string name="all_transactions">All Transactions</string>
    <string name="total_count">Total count</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="no_voice_notes">No voice memo</string>
    <string name="new_voice_note">New voice memo</string>
    <string name="recording">Recording...</string>
    <string name="delete_confirm">Are you sure?</string>
    <string name="recorder_title">Recording</string>
    <string name="use_my_location"> My location</string>
    <string name="count">Count</string>
    <string name="need_stuff_count">Please input stuff count.</string>
    <string name="voice_note">Voice Memo</string>
    <string name="can_not_get_location">Sorry, cannot get your location.</string>
    <string name="fail_to_online_update_exchange_rate">Fail to update exchange rate list online.</string>
    <string name="retry">Retry</string>
    <string name="cannot_get_current_location">Sorry, cannot get your current location. please try again later.</string>
    <string name="detecting_location">Detecting your location, please wait</string>
    <string name="network_not_available">Cannot access Internet</string>
</resources>