<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/new_password"
        android:maxLength="40"
        android:maxLines="1"
        android:password="true"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dip"
        android:text="@string/password_strength" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="5dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewWeak"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FF4545"
                android:gravity="center"
                android:text="@string/weak"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewMedium"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFD35E"
                android:gravity="center"
                android:text="@string/medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewStrong"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#267A12"
                android:gravity="center"
                android:text="@string/strong"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewBest"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3ABB1C"
                android:gravity="center"
                android:text="@string/best"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>