<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFlipperStuffsPanel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:inAnimation="@anim/fade_in"
    android:outAnimation="@anim/fade_out" >

    <include layout="@layout/loading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPaperStuffs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" >

            <Button
                android:id="@+id/buttonExpense"
                style="@style/button_style"
                android:background="@drawable/blue_button"
                android:text="@string/plus_pay" />

            <Button
                android:id="@+id/buttonIncome"
                style="@style/button_style"
                android:background="@drawable/blue_button"
                android:text="@string/substract_earn" />

            <Button
                android:id="@+id/buttonSearchStuff"
                style="@style/button_style"
                android:text="@string/more_stuffs" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ViewFlipper>