<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewFlipperTransactionPhoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:inAnimation="@anim/fade_in"
    android:outAnimation="@anim/fade_out" >

    <RelativeLayout
        android:id="@+id/relativeLayoutLoaingPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ProgressBar
            android:id="@+id/progressBarLoadingTranPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutNoPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewNoTransactionPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_photo"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayoutPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPaperTransactionPhotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/linearLayoutToolButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#50000000"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/toolButtonDeletePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_backgroud"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:text="@string/delete"
                android:textColor="#d2d2d2" />

            <Button
                android:id="@+id/toolButtonNewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_backgroud"
                android:drawableLeft="@android:drawable/ic_menu_camera"
                android:text="@string/take_photo"
                android:textColor="#d2d2d2" />

            <Button
                android:id="@+id/toolButtonAddExistingPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_backgroud"
                android:drawableLeft="@android:drawable/ic_menu_gallery"
                android:text="@string/add_photo"
                android:textColor="#d2d2d2" />
        </LinearLayout>
    </FrameLayout>

</ViewFlipper>